fixed cropping

--- a/static/main.css
+++ b/static/main.css
@@ -390,6 +390,17 @@ label.disabled {
   border-radius: 8px;
 }
 
+#focal1 img,
+#focal2 img,
+#focal3 img,
+#focal4 img,
+#focal5 img,
+#focal6 img {
+    width: 100%;
+    height: 100%;
+    border-radius: 20px;
+}
+
 #secondary1 img,
 #secondary2 img,
 #secondary3 img,
